Fixing some mobile layout issues

--- a/src/static/less/page.less
+++ b/src/static/less/page.less
@@ -16,7 +16,6 @@
 
     .main {
 		padding:20px 0 60px 0;
-		min-height:700px;
 	}
 
 	.selectall {
@@ -118,6 +117,9 @@
 			.jobname {
 				min-height:2.4em;
 				cursor:pointer;
+			}
+			.client {
+				text-transform:capitalize;
 			}
 		}
 
