--- a/src/static/less/popup.less
+++ b/src/static/less/popup.less
@@ -31,7 +31,6 @@
 		.flex-direction(row);
 		overflow:hidden;
 		.border-box();
-		background:@white;
 		.border-radius( 4px );
 		.box-shadow( 0 2px 5px rgba(0,0,0,0.5) );
 		.transition( opacity @transpeed );
@@ -51,6 +50,7 @@
 			.border-box();
 			overflow-y:auto;
 			.box-shadow( 11px 0 8px 8px rgba(0, 0, 0, 0.5) );
+			background:@white;
 			.jobname {
 				padding-right:1em;
 			}
@@ -107,22 +107,24 @@
 	}
 	
 @media (max-width:@realMobileWidth){
+	.popupwrapper {
+		display:block;
+		min-height:100vh;
+		overflow:auto;
+		background:rgba(0,0,0,0.5);
+
+		.mask {
+			display:none;
+		}
+	}
 	.popup {
-		.flex-direction(column);
+		display:block;
 		top:0;
 		left:0;
 		width:100%;
-		height:100vh;
+		height:auto;
 		overflow:visible;
-/*
-		.more-details {
-			position:relative;
-			display:block;
-			left:auto;
-			bottom:auto;
-			margin:0 auto;
-		}
-*/
+
 		.links {
 			position:relative;
 			width:auto;
@@ -143,7 +145,6 @@
 			}
 		}
 		.rightcol {
-			flex:1;
 			border:0;
 			.box-shadow( 11px 0 8px 8px rgba(0, 0, 0, 0.1) );
 		}
